2001-12-21  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (ISSLASH): Provide definition for DOS-like systems.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* libgettext.h: Moved to ../lib/gettext.h.
	* Makefile.in (HEADERS): Remove libgettext.h.
	(DISTFILES.obsolete): Add libgettext.h.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* gmo.h: Renamed from gettext.h.
	* gettext.h: Remove file.
	* gettextP.h: Update accordingly.
	* loadmsgcat.c: Likewise.
	* Makefile.in (COMHDRS): Add gmo.h, remove gettext.h.
	(DISTFILES.obsolete): Add gettext.h.
	Update dependencies.

2001-12-18  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 2:0:0.
	Used to force an soname of at least libintl.so.2 on Solaris, which
	already has a different libintl.so.1 in /usr/lib.

2001-12-15  Andrew Zabolotny  <zap@cobra.ru>
	    Bruno Haible  <bruno@clisp.org>

	* osdep.c: New file.
	* os2.c: New file.
	* dcigettext.c (DCIGETTEXT): Add backward compatibility support for
	OS/2.
	* localcharset.c: Add OS/2 support.
	* localealias.c (_nl_expand_alias): Initialize locale_alias_path once,
	but not statically.
	* Makefile.in (COMSRCS): Add osdep.c, os2.c.
	(OBJECTS): Add osdep.$lo.

2001-12-12  Bruno Haible  <bruno@clisp.org>

	* libgettext.h [!ENABLE_NLS]: Cast all function results to
	'const char *'.
	Reported by Alexandre Duret-Lutz <duret_g@lrde.epita.fr>.

2001-12-03  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (install-exec): Don't create an empty libdir.
	(installdirs): Update accordingly.

2001-11-30  Bruno Haible  <bruno@clisp.org>

	* plural-exp.h (plural_eval): Add back declaration.
	* Makefile.in (OBJECTS): Remove plural-eval.$lo.
	(COMSRCS): Remove plural-eval.c.
	(COMHDRS): Add plural-eval.c.
	(plural-eval.$lo): Remove dependency.
	(dcigettext.$lo): Depend on plural-eval.c.

2001-11-29  Bruno Haible  <bruno@clisp.org>

	* gettextP.h (_nl_locale_name): Don't declare inside glibc.